# Syncpad

./: .gitignore  README.md  WHITEPAPER.md
.github/: dependabot.yml
.github/workflows/: prod-docs.yml  prod-python.yml  prod-vite.yml  python-checks.yml  vite-checks.yml
backend/: .gitignore  Dockerfile  pyproject.toml  run.py
backend/app/: custom_types.py  env.py  errors.py  main.py
backend/app/controllers/: __init__.py  account.py  canary.py  csrf.py  settings.py  survey.py
backend/app/lib/: canary.py  crontabs.py  geoip.py  jwt.py  key_bulders.py  mCaptcha.py  ntfy.py  otp.py  s3.py  survey.py  tasks.py  url.py  user.py
backend/app/models/: canary.py  customs.py  session.py  survey.py  user.py
backend/app/tasks/: __init__.py  canary.py
backend/canary/: pyproject.toml
backend/canary/app/: custom_types.py  env.py  errors.py  main.py  types.py
backend/canary/app/controllers/: __init__.py  account.py  canary.py  session.py
backend/canary/app/lib/: canary.py  domain.py  jwt.py  mCaptcha.py  misc.py  otp.py  s3.py  smtp.py  tasks.py  url.py  user.py
backend/canary/app/models/: canary.py  customs.py  jwt.py  user.py
backend/canary/app/tasks/: __init__.py  _tasks.py  canary.py
backend/tests/: conftest.py  test_account.py  test_survey.py
docs/: .env  Dockerfile  index.html  package-lock.json  package.json  replace_env_vars.sh  vite.config.ts
docs/src/: App.tsx  vite-env.d.ts
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.svelte  app.css  app.html  global.d.ts  main.ts  stores.ts
frontend/src/assets/: styles.css
frontend/src/components/: Image.svelte  Lazy.svelte  LazyRoute.svelte  Mcaptcha.svelte  NavItems.svelte  OtpInput.svelte  PageLoading.svelte
frontend/src/components/Dashboard/: CanaryCard.svelte  SurveyCard.svelte
frontend/src/components/Survey/: Question.svelte  ShortAnswer.svelte  SurveyCard.svelte  TextArea.svelte  TextInput.svelte  Title.svelte  helpers.ts  modes.ts  types.ts
frontend/src/components/Survey/Create/: Checkboxes.svelte  MultipleChoice.svelte  Paragraph.svelte  Question.svelte  ShortAnswer.svelte  SingleChoice.svelte  Title.svelte  helpers.ts
frontend/src/components/Survey/Results/: Individual.svelte  Summarize.svelte
frontend/src/components/Survey/Submit/: Incomplete.svelte  MultipleChoice.svelte  Paragraph.svelte  Question.svelte  ShortAnswer.svelte  SingleChoice.svelte
frontend/src/lib/: Logo.svelte  account.ts  ajvValidate.ts  apiClient.ts  base64.ts  canary.ts  date.ts  logout.ts  misc.ts  survey.ts  theme.ts
frontend/src/lib/client/: CanaryClient.ts  index.ts  schema.json
frontend/src/lib/client/core/: OpenAPI.ts
frontend/src/lib/client/models/: AccountAuthModal.ts  (+58 more)
frontend/src/lib/crypto/: codecUtils.ts  hash.ts  publicKey.ts  secretKey.ts  signatures.ts
frontend/src/routes/: +layout.svelte  About.svelte  Account.svelte  Canary.svelte  EmailVerified.svelte  Login.svelte  SavedCanaries.svelte  Survey.svelte
frontend/src/routes/Dashboard/: AddSite.svelte  Dashboard.svelte  VerifySite.svelte
frontend/src/routes/Login/: Login.svelte  OTP.svelte  Password.svelte
old-frontend/: replace_env_vars.sh  tsconfig.json  vite.config.ts
old-frontend/src/: global.d.ts  stores.ts
old-frontend/src/components/: CheckMark.svelte  Image.svelte  Lazy.svelte  LazyRoute.svelte  Logo.svelte  PageLoading.svelte  RouteTransition.svelte
old-frontend/src/components/Dashboard/: SurveyCard.svelte
old-frontend/src/components/Survey/: types.ts
old-frontend/src/lib/: ajvValidate.ts  date.ts  misc.ts
old-frontend/src/lib/client/: index.ts  schema.json
old-frontend/src/lib/crypto/: publicKey.ts  signatures.ts
old-frontend/src/routes/: About.svelte  Account.svelte  EmailVerified.svelte  Login.svelte
old-frontend/src/routes/Dashboard/: Dashboard.svelte
(+61 files in other folders)
