[tool.poetry]
name = "purplix"
version = "0.2.0"
description = ""
authors = ["WardPearce <wardpearce@protonmail.com>"]
readme = "README.md"
packages = [
    {include = "*", from = "app"},
    {include = "run.py"}
]

[tool.poetry.scripts]
server = "run:main"

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.3.2"
motor-types = "^1.0.0b1"
pynacl = "^1.5.0"
pyotp = "^2.8.0"
litestar = {extras = ["full"], version = "^2.5.2"}
aiohttp = "^3.9.2"
email-validator = "^2.1.0"
argon2-cffi = "^23.1.0"
yarl = "^1.9.4"
aiosmtplib = "^3.0.1"
aiobotocore = "^2.11.1"
aiohttp-proxy = "^0.1.2"
aiocron = "^1.8"
humanize = "^4.9.0"
cryptography = "^41.0.7"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = {extras = ["standard"], version = "^0.27.0"}


[tool.poetry.group.dev.dependencies]
motor-types = "^1.0.0b1"
types-aiobotocore = {extras = ["essential"], version = "^2.11.0"}
pytest = "^8.0.0"
black = "^23.12.1"
mypy = "^1.8.0"
types-redis = "^4.6.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[build-system.dependencies]
# Used for GExiv2
libgexiv2-dev = {version = "*", markers = "sys_platform == 'linux'"}