[tool.poetry]
name = "purplix"
version = "0.2.0"
description = ""
authors = ["WardPearce <wardpearce@protonmail.com>"]
readme = "README.md"
packages = [
    {include = "*", from = "app"},
    {include = "run.py"}
]

[tool.poetry.scripts]
server = "run:main"

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.5.1"
motor-types = "^1.0.0b4"
pynacl = "^1.5.0"
pyotp = "^2.8.0"
litestar = {extras = ["full"], version = "^2.9.1"}
aiohttp = "^3.9.5"
email-validator = "^2.2.0"
argon2-cffi = "^23.1.0"
yarl = "^1.9.4"
aiosmtplib = "^3.0.1"
aiobotocore = "^2.13.1"
aiohttp-proxy = "^0.1.2"
aiocron = "^1.8"
humanize = "^4.10.0"
cryptography = "^42.0.8"
pydantic-settings = "^2.3.4"
redis = "^5.0.7"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
uvicorn = {extras = ["standard"], version = "^0.30.3"}


[tool.poetry.group.dev.dependencies]
motor-types = "^1.0.0b4"
types-aiobotocore = {extras = ["essential"], version = "^2.13.1"}
pytest = "^8.3.1"
black = "^24.4.2"
mypy = "^1.11.0"
types-redis = "^4.6.0.20240726"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[build-system.dependencies]
# Used for GExiv2
libgexiv2-dev = {version = "*", markers = "sys_platform == 'linux'"}