[tool.poetry]
name = "canary"
version = "0.1.0"
description = ""
authors = ["WardPearce <wardpearce@protonmail.com>"]
readme = "README.md"
packages = [
    {include = "*", from = "app"},
    {include = "run.py"}
]

[tool.poetry.scripts]
server = "run:main"

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.1.2"
motor-types = "^1.0.0b1"
pynacl = "^1.5.0"
pyotp = "^2.8.0"
litestar = {extras = ["full"], version = "^2.0.0a5"}
aiohttp = "^3.8.4"
email-validator = "^2.0.0.post2"


[tool.poetry.group.dev.dependencies]
motor-types = "^1.0.0b1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
